# webgl_test

./: .gitignore  Cargo.toml  README.md
WebGL2-TypeScript/: Misc.d.ts  WebGL2.d.ts
doc/: investigation.md
smallpt-0.2.1-/: .travis.yml  Cargo.toml  Cargo.toml.orig  LICENSE  README.md
smallpt-0.2.1-/examples/: reference.rs
smallpt-0.2.1-/src/: bsdf.rs  camera.rs  hit.rs  lib.rs  material.rs  plane.rs  ray.rs  rectangle.rs  scene.rs  sphere.rs  triangle.rs  vector.rs
src/: fetch.rs  lib.rs  map.rs  mesh.rs  physics.rs  raytrace.rs  render.rs  uyun.rs
www/: package.json  tsconfig.json  tslint.json
www/src/: index.ts  utils.ts  webgl_test.d.ts
www/static/: index.html
