[package]
name = "webgl_test"
version = "0.1.0"
authors = ["z"]

[dependencies]
bincode = "1.0.1"
byteorder = { version = "1.2.4", default-features = false }
jpeg-decoder = { version = "0.1.15", default-features = false }
lazy_static = "1.1.0"
nalgebra = "0.16.0"
ncollide3d = "0.17.1"
nphysics3d = { version = "*", default-features = false, features = [ "use-wasm-bindgen" ] }
pcg_rand = "0.9.1"
png = "0.12.0"

rand = "0.5.5"



webgl_test_common = { path = "./webgl_test_common" }
decorum = "0.0.11" # Unstable. Depend on exact version only.

brotli = "2.5.0"


# #disable for build error in src/random.rs
# [dependencies.rand]
# git = "https://github.com/rust-random/rand.git"
# branch = "master"
# default-features = false
# features = ["wasm-bindgen"]


futures = "0.1.20"

serde = "1.0.79"
serde_derive = "1.0.79"
serde_urlencoded = "0.5.3"

wasm-bindgen = { version="0.2.17", features = ["serde-serialize"]  }
js-sys = "0.3.0"
wasm-bindgen-futures = "0.3.0"

[dependencies.web-sys]
version = "0.3.0"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]




[dependencies.delaunator]
git = "https://github.com/mourner/delaunator-rs.git"
[dependencies.gltf]
git = "https://github.com/piaoger/gltf.git"
branch = "master"
default-features = false
features = ["import", "utils", "names"]

[dependencies.smallpt]
git = "https://github.com/piaoger/smallpt-rs.git"
default-features = false
features = [ "wasm" ]

[dependencies.rscsg]
git = "https://github.com/carlmartus/rscsg.git"

[dependencies.plexus]
git = "https://github.com/olson-sean-k/plexus.git"


[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
debug = true  # For wasm-bindgen
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
